fix for gh logo in safari jumping on hover

--- a/css/main.css
+++ b/css/main.css
@@ -179,6 +179,7 @@ li {
 
 .button__icon {
   margin-right: var(--spacing-small);
+  transform: translateY(0);
 }
 
 .button-group {
